fixing background attachment on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,16 +86,17 @@ body::-webkit-scrollbar-thumb {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
-.my-bg-image2 {
-    background-image: url('../public/bg/testeo27.png');
+
+
+.bg {
+    background: url('../public/bg/testeo26.png') no-repeat center;
     background-size: 100% 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
 }
 
-#works {
-}
 
 .line {
     position: absolute;
